# BlueTTY

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  bluetty.conf.example  bluetty.conf.minimal  cliff.toml
.github/workflows/: changelog.yml  ci.yml  release.yml
docs/: BUILD.md  CI.md  CONFIGURATION.md  DOCKER.md  INDEX.md  PACKAGING.md  RELEASE.md  TROUBLESHOOTING.md
packaging/: nfpm.yaml  postremove.sh
scripts/: build-artifacts.sh  package-artifacts.sh
src/: app.rs  config.rs  main.rs
src/bluez/: device.rs  mod.rs  profile.rs
src/session/: getty.rs  io_forward.rs  mod.rs  pty.rs
systemd/: bluetty.service
