[package]
name = "bluetty"
version = "1.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
ini = "1.3"
nix = { version = "0.30", features = ["fs", "process", "signal", "term", "poll"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time", "process", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zbus = { version = "4.4", default-features = false, features = ["tokio"] }
shell-words = "1.1"
